<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="10dp" >

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:onClick="projects"
        android:text="@string/projects"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/button3"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/button1"
        android:onClick="resources"
        android:text="@string/resources"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="54dp"
        android:onClick="emailID"
        android:text="@string/email"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignRight="@+id/button2"
        android:layout_alignTop="@+id/button3"
        android:onClick="changePassword"
        android:text="@string/change_pwd"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginBottom="47dp"
        android:layout_marginLeft="79dp"
        android:text="@string/home_heading"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

</RelativeLayout>