<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:id="@+id/project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_name_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/enter_project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|textCapWords"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow android:layout_width="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/description_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText1"
                android:layout_height="100dp"
                android:ems="10"
                android:singleLine="false" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/enter_start_date"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/enter_end_date"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/sprint_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sprint_duration_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText2"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/select_resources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_resources_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <ListView
                android:id="@+id/listview_select_resources"
                android:layout_width="fill_parent"
                android:layout_height="350dp"
                android:layout_margin="10dp"
                android:layout_span="2"
                android:drawSelectorOnTop="true" >
            </ListView>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/cancel"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/button_background"
                android:onClick="cancelProject"
                android:text="@string/cancel_text"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/create"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:onClick="createProject"
                android:text="@string/create_text"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

</LinearLayout>