<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:stretchColumns="*" >

        <TableRow android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/task_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priority_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/resource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resource_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resource_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/acceptance_criteria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acceptance_criteria_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/acceptance_criteria_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/estimated_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimated_hours_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/estimated_hours_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/actual_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actual_hours_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/actual_hours_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/remaining_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_hours_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/remaining_hours_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/comments_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginTop="20dp"
                android:layout_span="2"
                android:background="@drawable/button_background"
                android:onClick="editViewTask"
                android:text="Edit"
                android:textColor="#FFFFFF" />

        </TableRow>
    </TableLayout>

</LinearLayout>