<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/login_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/login_heading_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_layout"
        android:gravity="center"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="3dip"
                android:text="@string/uname_text"
                android:textColor="#000000"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/enter_uname"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:inputType="text"
                android:maxLength="32"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd_text"
                android:textColor="#000000"
                android:textSize="25sp" />
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:maxLength="32"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TableLayout>

                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="54dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:onClick="signIn"
                    android:text="@string/sign_in_text"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" >
                </Button>

                <Button
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="51dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_background"
                    android:onClick="signUp"
                    android:text="@string/sign_up_text"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" >
                </Button>
            </TableLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>