<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:stretchColumns="*" >

        <TableRow android:layout_marginTop="80dp" >

            <TextView
                android:id="@+id/sprint_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sprint Name :"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/enter_sprint_no"
                android:layout_height="wrap_content"
                android:ems="10"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/sprint_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/enter_sprint_description"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:inputType="text|textMultiLine" />
        </TableRow>

        <TableRow android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/enter_start_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />
        </TableRow>

        <TableRow android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/enter_end_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />
        </TableRow>


        <TableRow android:layout_marginTop="50dp">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:background="@drawable/button_background"
                android:onClick="cancelSprint"
                android:text="Cancel"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/button_background"
                android:layout_marginLeft="73dp"
                android:layout_marginRight="50dp"
                android:onClick="createSprint"
                android:text="Create"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>